--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -47,8 +47,8 @@ eureka:
 
 razorpay:
   key:
-    id: rzp_test_RBWb9bxe9qlq2b
-    secret: 33oEXSexJYd9LEFgMBHd01nD
+    id: ${RAZORPAY_KEY_ID}
+    secret: ${RAZORPAY_KEY_SECRET}
 
 server:
   port: 8084
